--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 .consola {
   background-color: #000;
-  color: #0dbc79;
+  color: #16bc6a;
   height: 80%;
   width: 95%;
   overflow-y: scroll;
